--- a/app/src/main/res/layout/story_fragment.xml
+++ b/app/src/main/res/layout/story_fragment.xml
@@ -24,41 +24,17 @@
             tools:layout_editor_absoluteX="133dp"
             tools:layout_editor_absoluteY="198dp" />
 
-        <Button
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/button"
-            android:layout_width="159dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            android:layout_marginStart="232dp"
-            android:layout_marginBottom="670dp"
-            android:background="#008577"
-            android:text="Добавить запись"
-            android:textColor="@color/white"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
-
-        <Button
-            android:id="@+id/button4"
-            android:layout_width="158dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            android:layout_marginStart="232dp"
-            android:layout_marginBottom="610dp"
-            android:background="#008577"
-            android:text="удалить запись"
-            android:textColor="@color/white"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="parent" />
-
-        <com.google.android.material.bottomnavigation.BottomNavigationView
-            android:id="@+id/bottom_navigation"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            android:background="@color/colorPrimary"
-            app:itemIconTint="@color/white"
-            app:itemTextColor="@color/white"
-            app:menu="@menu/bottom_navigation_menu" />
+            android:layout_gravity="bottom|right"
+            android:src="@drawable/ic_baseline_add_24"
+            app:fabSize="normal"
+            app:maxImageSize="45dp"
+            android:layout_marginBottom="70dp"
+            android:layout_marginRight="10dp"/>
 
     </FrameLayout>
 
