--- a/app/src/main/res/layout/story_fragment.xml
+++ b/app/src/main/res/layout/story_fragment.xml
@@ -21,6 +21,7 @@
             android:id="@+id/recycler_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            tools:listitem="@layout/user_row"
             tools:layout_editor_absoluteX="133dp"
             tools:layout_editor_absoluteY="198dp" />
 
