--- a/app/src/main/res/layout/camera_fragment.xml
+++ b/app/src/main/res/layout/camera_fragment.xml
@@ -7,11 +7,12 @@
 
     <TextView
         android:id="@+id/textResult"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="391dp"
+        android:layout_height="619dp"
         android:layout_below="@+id/action_btn"
-        android:layout_marginTop="29dp"
-        android:text="Результат:" />
+        android:layout_marginStart="9dp"
+        android:layout_marginTop="39dp"
+        android:text="результат:" />
 
     <Button
         android:id="@+id/action_btn"
@@ -34,7 +35,7 @@
         android:layout_marginStart="216dp"
         android:layout_marginTop="18dp"
         android:background="#008577"
-        android:text="проверить"
+        android:text="Проверить"
         android:textColor="@color/white" />
 
 
