--- a/app/src/main/res/layout/create_user.xml
+++ b/app/src/main/res/layout/create_user.xml
@@ -10,12 +10,14 @@
         android:id="@+id/first_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="your text" />
+        android:hint="ваш запрос" />
 
     <Button
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Save User" />
+        android:text="Сохранить запись"
+        android:background="#008577"
+        android:textColor="@color/white" />
 
 </LinearLayout>
