--- a/app/src/main/res/layout/speller.xml
+++ b/app/src/main/res/layout/speller.xml
@@ -33,10 +33,12 @@
         android:id="@+id/textView"
         android:layout_width="385dp"
         android:layout_height="587dp"
-        android:text="ваш текст"
+        android:text="результат:"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView1"
+        app:layout_constraintVertical_bias="0.914" />
 
     <Button
         android:id="@+id/buttonret"
