--- a/app/src/main/res/layout/speller.xml
+++ b/app/src/main/res/layout/speller.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:screenOrientation="portrait"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -46,7 +47,7 @@
         android:layout_height="45dp"
         android:layout_marginTop="84dp"
         android:background="#008577"
-        android:text="Домой"
+        android:text="сохранить"
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.931"
